--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ markdownify>=0.11.6
 readability-lxml>=0.8.1
 weasyprint>=60.0
 click>=8.1.0
-markdown>=3.5.0 
+markdown>=3.5.0
+streamlit>=1.28.0
+pandas>=2.0.0 
