fix: resolve JavaScript asset loading issue on Render deployment
- Pin Streamlit to stable version 1.28.1

- Add enableStaticServing configuration for proper asset serving

- Update render.yaml with additional server flags for deployment

- Add environment variable for static serving support

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,6 +4,8 @@ port = 8080
 address = "0.0.0.0"
 enableXsrfProtection = false
 enableCORS = false
+baseUrlPath = ""
+enableStaticServing = true
 
 [browser]
 gatherUsageStats = false
