--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,8 @@ services:
     name: book-scraper
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "streamlit run streamlit_app.py --server.port $PORT --server.address 0.0.0.0 --server.headless true"
-    plan: free 
+    startCommand: "streamlit run streamlit_app.py --server.port $PORT --server.address 0.0.0.0 --server.headless true --server.enableCORS false --server.enableXsrfProtection false"
+    plan: free
+    envVars:
+      - key: STREAMLIT_SERVER_ENABLE_STATIC_SERVING
+        value: true 
